# rules_dotnet

./: .gitignore  BUILD  README.md  WORKSPACE
dotnet/: BUILD  defs.bzl  nuget_repo.bzl  projects_repo.bzl  sdk.bzl
dotnet/private/: BUILD.sdk.bazel  context.bzl  json.bzl  runfiles.bzl  toolchain.bzl
dotnet/private/actions/: assembly.bzl  assembly_core.bzl  resolve.bzl  resx.bzl
dotnet/private/rules/: binary.bzl  import.bzl  library.bzl  msbuild_aspect.bzl  nuget.bzl  resource.bzl  resx.bzl  runfiles.bzl  stdlib.bzl  test.bzl
examples/: .bazelrc  BUILD  Bazel.targets  DefaultRefs.props  Directory.Build.targets  Packages.Props  WORKSPACE  examples.sln  nuget.config
examples/src/Lib/: BUILD  Lib.cs
examples/src/Lib2/: BUILD  Lib2.cs
examples/src/Lib3/: BUILD
examples/src/Something/: BUILD
examples/src/example/: BUILD  Example.csproj  Program.cs
tests/tools/nuget2bazel/: nuget2bazel-test.csproj
tools/nuget2bazel/: AddCommand.cs  DeleteCommand.cs  LocalPackageExtractor.cs  LocalPackageWithGroups.cs  ProjectBazelManipulator.cs  SdkList.cs  UpdateCommand.cs  WorkspaceEntry.cs  WorkspaceEntryBuilder.cs  WorkspaceParser.cs  WorkspaceWriter.cs  nuget2bazel.csproj
tools/nuget2bazel/Properties/: launchSettings.json
tools/server/: BUILD  BuildProtocol.cs  Client.cs  Compiler.Server.Multiplex.csproj  Logger.cs  Program.cs  SymlinkResolver.cs  deps.bzl
tools/simpleresgen/: BUILD  Translator.cs  simpleresgen.csproj
tools/simpleresgen/MSBuild.Shared/: FileUtilities.cs
